--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.3.0",
 	"description": "extended POSIX-style sprintf",
 	"main": "./lib/extsprintf.js",
+	"files": [
+		"./lib/extsprintf.js"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/davepacheco/node-extsprintf.git"
